License report plugin